Разбивка с Hash